src/test/deca/context/valid/sansObjet/readInt.deca
// Description:
//   Lire un entier ou un Float
//
// Resultats:
//
//
// Historique:
//    cree le 14/01/2020

{
    readInt();
    readFloat();

}
