src/test/deca/context/invalid/sansObjet/print_bool.deca
// Description:
//    Print type invalid
//
// Resultats:
//    Ligne 15: print(type) n'est pas autorisé
// 
// Historique:
//    cree le 01/01/2020

{
   print(true);
}
